Fix overflow problem

--- a/heartlink/src/app.css
+++ b/heartlink/src/app.css
@@ -1,3 +1,8 @@
+#main {
+  width: 100%;
+  height: 100%;
+}
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
