--- a/heartlink/src/components/messages/style.css
+++ b/heartlink/src/components/messages/style.css
@@ -1,6 +1,9 @@
 #messages-container
 {
   position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .message-bubble
